wp-content/themes/templatex1/style.css
/* ... */
/*page projects*/
.pc-slider{
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
}
.projects__wrap{
    margin-top: 44px;
    margin-bottom: 194px;
}
.title__archive{
    margin-top: 35px;
}

.title__archive .iconSon{
    margin: auto;
}
.archive_title_h1{
    margin-top: 10px;
}
.block__projects{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    width: 1358px;
    gap: 60px;
}
.projects__image{
    width: 649px;
    height: 433px;
}
.archive__pagination{
    display: none;
}
.bedroom__nav{
    margin-top: 30px;
}
.block-info__right{
    width: 922px;
}
.bedroom__nav a {
    font-size: 14px;
}
.taxonomy {
    font-size: 14px;
}
.bedroom__nav .post{
    font-size: 14px;
}
.proMenu_for_phone{
    display: none;
}
/* ... */

